#4633 Create new documents without save