@@ -1,93 +1,115 @@
 package stroom.docstore.impl.fs;
 
 import stroom.docref.DocRef;
+import stroom.docstore.impl.DocumentData;
 import stroom.docstore.impl.Persistence;
-import stroom.docstore.shared.Doc;
+import stroom.docstore.shared.AbstractDoc;
 import stroom.util.json.JsonUtil;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class TestFSPersistence {
 
-    private static final Charset CHARSET = StandardCharsets.UTF_8;
-
     @Test
     void test() throws IOException {
         final Persistence persistence = new FSPersistence(
                 Files.createTempDirectory("docstore").resolve("conf"));
 
-        final String uuid1 = UUID.randomUUID().toString();
-        final String uuid2 = UUID.randomUUID().toString();
-        final DocRef docRef = new DocRef("test-type", "test-uuid", "test-name");
+        final GenericDoc doc = new GenericDoc();
+        doc.setUuid("test-uuid");
+        doc.setName("test-name");
+        doc.setVersion(UUID.randomUUID().toString());
+        final DocRef docRef = doc.asDocRef();
 
         // Ensure the doc doesn't exist.
         if (persistence.exists(docRef)) {
             persistence.delete(docRef);
         }
 
-        final GenericDoc doc = new GenericDoc();
-        doc.setType(docRef.getType());
-        doc.setUuid(docRef.getUuid());
-        doc.setName(docRef.getName());
         ObjectMapper mapper = JsonUtil.getNoIndentMapper();
         byte[] bytes = mapper.writeValueAsBytes(doc);
 
         // Create
-        Map<String, byte[]> data = new HashMap<>();
+        final Map<String, byte[]> data = new HashMap<>();
         data.put("meta", bytes);
-        persistence.write(docRef, false, data);
+        final DocumentData documentData = DocumentData
+                .builder()
+                .docRef(docRef)
+                .version(doc.getVersion())
+                .uniqueName("test-type:test-uuid")
+                .data(data)
+                .build();
+        persistence.create(documentData);
 
         // Exists
         assertThat(persistence.exists(docRef)).isTrue();
 
         // Read
-        data = persistence.read(docRef);
-        assertThat(data.get("meta")).isEqualTo(bytes);
+        final Optional<DocumentData> optionalDocumentData = persistence.read(docRef);
+        assertThat(optionalDocumentData).isPresent();
+        final DocumentData saved = optionalDocumentData.get();
+        assertThat(saved.getVersion()).isEqualTo(documentData.getVersion());
+        final Map<String, byte[]> savedData = saved.getData();
+        assertThat(savedData.get("meta")).isEqualTo(bytes);
 
         // List
         List<DocRef> refs = persistence.list(docRef.getType());
         assertThat(refs.size()).isEqualTo(1);
-        assertThat(refs.get(0)).isEqualTo(docRef);
-        assertThat(refs.get(0).getType()).isEqualTo(docRef.getType());
-        assertThat(refs.get(0).getUuid()).isEqualTo(docRef.getUuid());
-        assertThat(refs.get(0).getName()).isEqualTo(docRef.getName());
+        final DocRef docRef1 = refs.getFirst();
+        assertThat(docRef1).isEqualTo(docRef);
+        assertThat(docRef1.getType()).isEqualTo(docRef.getType());
+        assertThat(docRef1.getUuid()).isEqualTo(docRef.getUuid());
+        assertThat(docRef1.getName()).isEqualTo(docRef.getName());
 
         // Update
-        doc.setName("New Name");
+        doc.setVersion(UUID.randomUUID().toString());
         bytes = mapper.writeValueAsBytes(doc);
-        data = new HashMap<>();
-        data.put("meta", bytes);
-        persistence.write(docRef, true, data);
+        final Map<String, byte[]> newData = new HashMap<>();
+        newData.put("meta", bytes);
+        final DocumentData newDocumentData = saved
+                .copy()
+                .version(doc.getVersion())
+                .data(newData)
+                .build();
+        persistence.update(saved.getVersion(), newDocumentData);
 
         // Read
-        data = persistence.read(docRef);
-        assertThat(data.get("meta")).isEqualTo(bytes);
+        final Optional<DocumentData> optionalDocumentData2 = persistence.read(docRef);
+        assertThat(optionalDocumentData2).isPresent();
+        final DocumentData saved2 = optionalDocumentData2.get();
+        assertThat(saved2.getVersion()).isEqualTo(newDocumentData.getVersion());
+        final Map<String, byte[]> savedData2 = saved2.getData();
+        assertThat(savedData2.get("meta")).isEqualTo(bytes);
 
         // List
         refs = persistence.list(docRef.getType());
         assertThat(refs.size()).isEqualTo(1);
-        assertThat(refs.get(0)).isEqualTo(docRef);
-        assertThat(refs.get(0).getType()).isEqualTo(docRef.getType());
-        assertThat(refs.get(0).getUuid()).isEqualTo(docRef.getUuid());
-        assertThat(refs.get(0).getName()).isEqualTo("New Name");
+        final DocRef docRef2 = refs.getFirst();
+        assertThat(docRef2).isEqualTo(docRef);
+        assertThat(docRef2.getType()).isEqualTo(docRef.getType());
+        assertThat(docRef2.getUuid()).isEqualTo(docRef.getUuid());
+        assertThat(docRef2.getName()).isEqualTo("test-name");
 
         // Delete
         persistence.delete(docRef);
     }
 
-    private static class GenericDoc extends Doc {
+    private static class GenericDoc extends AbstractDoc {
 
+        @Override
+        public String getType() {
+            return "GenericDoc";
+        }
     }
 }
